// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> on sub pages renders correctly with Nav 1`] = `
<div
  id="app"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <meta
      charset="UTF-8"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <title>
      위탁급식/식당 유청
    </title>
    <meta
      content="위탁급식/식당 유청"
      property="og:title"
    />
    <meta
      content="착한가격의 집밥, 위탁 급식, 뷔폐 식당, 기업체 각종 행사/ 모임 단체 식사, 경주 전지역 배달, No MSG, 신선한 지역 농산물"
      property="og:description"
    />
    <meta
      content="###"
      property="og:type"
    />
    <meta
      content="###"
      property="og:url"
    />
    <meta
      content="./../assets/img/header.jpg"
      property="og:image"
    />
    <link
      href="http://domain/humans.txt"
      rel="author"
      type="text/plain"
    />
    <link
      href="http://domain/robots.txt"
      rel="author"
      type="text/plain"
    />
  </HelmetWrapper>
  <LoadableComponent />
</div>
`;

exports[`<App /> renders correctly with Nav on index page 1`] = `
<div
  id="app"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <meta
      charset="UTF-8"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <title>
      위탁급식/식당 유청
    </title>
    <meta
      content="위탁급식/식당 유청"
      property="og:title"
    />
    <meta
      content="착한가격의 집밥, 위탁 급식, 뷔폐 식당, 기업체 각종 행사/ 모임 단체 식사, 경주 전지역 배달, No MSG, 신선한 지역 농산물"
      property="og:description"
    />
    <meta
      content="###"
      property="og:type"
    />
    <meta
      content="###"
      property="og:url"
    />
    <meta
      content="./../assets/img/header.jpg"
      property="og:image"
    />
    <link
      href="http://domain/humans.txt"
      rel="author"
      type="text/plain"
    />
    <link
      href="http://domain/robots.txt"
      rel="author"
      type="text/plain"
    />
  </HelmetWrapper>
</div>
`;
